# py

./: .bazelrc  .bazelversion  .gitignore  BUILD  MODULE.bazel  README.bazel.md  gazelle_python.yaml  pyproject.toml
.aspect/cli/: config.yaml
.github/workflows/: multitool.yml
requirements/: all.txt
tools/: BUILD
tools/lint/: linters.bzl
